# TaxNVote26

./: .dockerignore  .env.docker.demo.example  .env.docker.example  .env.example  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  TNV_Category_Mapping.md  docker-compose.demo.yml  docker-compose.yml
crates/tnv-budget-tree/: Cargo.toml  build.sh
crates/tnv-budget-tree/src/: adjust.rs  lib.rs  node.rs  topics.rs  wasm.rs
crates/tnv-budget-tree/tests/: wasm.rs
crates/tnv-csv-convert/: Cargo.toml
crates/tnv-csv-convert/src/: main.rs
crates/tnv-server/: Cargo.toml
crates/tnv-server/src/: acl.rs  auth.rs  csv_parse.rs  extract.rs  it_admin.rs  mailer.rs  main.rs  models.rs  state.rs  validation.rs
crates/tnv-server/src/handlers/: admin.rs  aggregate.rs  auth.rs  health.rs  identity.rs  mod.rs  taxdollar.rs  templates.rs
data/: README.md  budauth.csv
docker-pkg/: .env.docker.example  Dockerfile  README.md  docker-compose.yml
docs/: TNV_Server_Plan.md  TNV_Visual_Tree_Plan.md  tnv_architecture.jsx  tnv_architecture.mermaid
frontend/: .env.example  .env.test  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: submit.spec.ts  templates.spec.ts  view-mine.spec.ts
frontend/src/: App.vue  api.ts  config.ts  rollup.ts
frontend/src/components/: AdminView.vue  AppHeader.vue  AuthDialog.vue  HelpDialog.vue  LoginDialog.vue  NodeRow.vue  PinDialog.vue  PublicSubmission.vue  ReceiptDialog.vue  ResultsRow.vue  ResultsView.vue  RollupRow.vue  TemplatesView.vue
frontend/src/router/: index.ts
frontend/src/stores/: admin.ts  budget.ts  session.ts
frontend/src/types/: budget.ts
frontend/src/views/: AboutView.vue  HomeView.vue
frontend/tests/: NodeRow.test.ts  api.test.ts  csv-builders.test.ts  format.test.ts  session.test.ts  setup.ts  store-pure.test.ts  store.test.ts
migrations/postgres/: 001_init.sql  002_verify_attempts.sql  003_admin.sql  004_varchar.sql  005_access_pin.sql
migrations/sqlite/: 001_init.sql  002_verify_attempts.sql  003_admin.sql  005_access_pin.sql
packaging/: README.md  install.sh  make-package.sh
packaging/env/: demo.env.example  full.env.example
packaging/systemd/: tnv-demo.service  tnv-full.service
