[package]
name = "tnv-server"
version = "0.1.0"
edition = "2024"

# Two mutually-exclusive build variants selected at compile time. Exactly one
# must be active (a compile_error! in main.rs enforces this):
#   full — email/password registration + login (the permanent public site)
#   demo — name + PIN identity for conference use (admin email login still
#          available, but no public self-registration)
# Default is `full`; build the demo with:
#   cargo build -p tnv-server --no-default-features --features demo
[features]
default = ["full"]
full = []
demo = []

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "timeout"] }
tower = { version = "0.5", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
argon2 = "0.5"
jsonwebtoken = "9"
dotenvy = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "any", "chrono", "migrate", "macros"] }
async-trait = "0.1"
tnv-budget-tree = { path = "../tnv-budget-tree" }
lettre = { version = "0.11.22", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls", "hostname", "pool"] }
axum-acl = { git = "https://github.com/greenpdx/axum-acl", rev = "8d28ecaee9daa6b078017088f7190d113c6df7f4", version = "0.3.0" }
